Fix translation and styles.

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1,60 +1,5 @@
-#minecraft-integration {
-	h1 > img {
-		margin-bottom: 7px;
-		width: 42px;
-		height: 42px;
-	}
-
-    .btn, .form-control, .navbar {
-        border-radius: 0;
-    }
-
-    hr {
-        margin: 0 -15px;
-    }
-
-    .container {
-        font-size: 18px;
-        margin-bottom: 100px;
-    }
-
-	td {
-		vertical-align: middle;
-	}
-
-	.nav-tabs > li > a {
-		background-color: rgb(251, 251, 251);
-		border-color: #D2D2D2;
-
-		&:hover {
-			background-color: rgb(255, 255, 255);
-			border-color: #337AB7;
-		}
-	}
-
-	.nav-tabs > li.active > a {
-		color: #FFF;
-		background-color: #337AB7;
-		border-color: #337AB7;
-	}
-
-	.info {
-		border-radius: 100px;
-	}
-
-	.compact {
-		width: 0;
-	}
-
-	.squish {
-		padding-right: 0;
-	}
-
-    body, small, p, div {
-        font-family: "Roboto", sans-serif;
-    }
-
-    .input-row {
+#minecraft-widgets {
+	.input-row {
         margin-bottom: 20px;
 
         .form-control {
@@ -117,229 +62,4 @@
             }
         }
     }
-
-	.modal-body {
-		padding: 0;
-
-		table {
-			margin-bottom: 0;
-		}
-	}
-
-	.no-break {
-		word-break: keep-all;
-		white-space: nowrap;
-	}
-
-	.userpic {
-		border-radius: 20px;
-	}
-
-	td > a {
-		text-decoration: none;
-		outline: 0;
-	}
-}
-
-.ajaxInputColorPicker {
-    font-weight: bold;
-    width: 120px;
-}
-
-.plugin-list, .mod-list {
-	max-width: 400px;
-    width: 400px;
-
-	.popover-content {
-		padding: 0;
-	}
-
-	td {
-		padding: 6px 10px;
-	}
-
-	.popover-title {
-		font-size: 18px;
-		font-weight: normal;
-		padding: 10px;
-		color: white;
-	}
-
-	.table-plugin-list, .table-mod-list {
-		margin: 0;
-	}
-}
-
-.plugin-list .popover-title {
-	background-color: #5B94DE;
-}
-
-.mod-list .popover-title {
-	background-color: #D94F79;
-}
-
-[data-popover="plugin-list"], [data-popover="mod-list"] {
-    cursor: pointer;
-}
-
-.has-tooltip {
-    cursor: pointer;
-}
-
-.tooltip-inner {
-    max-width: 360px;
-}
-
-.admin {
-    .panel[data-widget="mi-chat"],
-    .panel[data-widget="mi-directory"],
-    .panel[data-widget="mi-gallery"],
-    .panel[data-widget="mi-map"],
-    .panel[data-widget="mi-ping-graph"],
-    .panel[data-widget="mi-players-graph"],
-    .panel[data-widget="mi-players-grid"],
-    .panel[data-widget="mi-status"],
-    .panel[data-widget="mi-top-graph"],
-    .panel[data-widget="mi-top-list"],
-    .panel[data-widget="mi-tps-graph"] {
-        > .panel-heading {
-            background-color: #24B32D;
-            color: #fff;
-        }
-
-        > .panel-body {
-            border-top-color: #AAA;
-        }
-
-        .btn-primary:hover, .btn-primary:focus, .btn-primary.focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
-            color: #000;
-            background-color: #FF8;
-            border-color: #AA3;
-        }
-
-        .btn-primary {
-            color: #000;
-            background-color: #FE6;
-            border-color: #AA3;
-        }
-
-        background-color: #F8F8F8;
-        border-color: #AAA;
-
-        .mi-accordion {
-            margin: 25px 0px;
-
-            >.panel {
-                >.panel-heading {
-                    text-transform: none;
-                    border-bottom: #D6E9C6 1px solid;
-                    box-shadow: 0px 0px 2px 0px rgba(165, 165, 165, 0.75);
-                }
-            }
-        }
-    }
-}
-
-.mi-container {
-    position: relative;
-	min-height: 40px;
-
-	&[data-widget="mi-status"] {
-		[data-popover="plugin-list"] {
-			text-decoration: none;
-		}
-
-		.fa {
-			text-decoration: none;
-		}
-	}
-
-    .widget-table {
-        margin-bottom: 0px;
-
-        .td-label {
-            padding-left: 16px;
-            max-width: 90px;
-            width: 90px;
-        }
-
-        .td-padded {
-            padding-left: 16px;
-        }
-    }
-
-	.mi-avatar {
-		width: 46px;
-		height: 46px;
-		border-width: 3px;
-	}
-
-	.mi-avatars, .avatars {
-		font-size: 0;
-	}
-
-    .mi-canvas {
-        width: 100% !important;
-        max-width: 2800px;
-        height: auto !important;
-        display: block;
-    }
-
-    .mi-iframe {
-        border-style: solid;
-        border-width: 2px;
-        border-color: #888;
-        display: block;
-    }
-
-	&[data-widget="mi-players-graph"],
-	&[data-widget="mi-ping-graph"],
-	&[data-widget="mi-top-graph"],
-	&[data-widget="mi-tps-graph"], {
-		background-color: #ffffff;
-	}
-
-	&[data-widget="mi-chat"] {
-		div {
-			height: 100px;
-			max-height: 200px;
-			overflow-y: scroll;
-			width: 100%;
-			border: 1px inset #808080;
-		}
-		input {
-			width: 100%;
-		}
-		td {
-			padding: 1px;
-		}
-		td+td {
-			width: 1px;
-		}
-	}
-}
-
-.mcwe-modal .mcwe-modal-dialog {
-    height: 92%;
-    width: 92%;
-    margin: 30px auto auto;
-    padding-left: 15px;
-}
-
-.mcwe-modal .mcwe-modal-content {
-    height: 100%;
-}
-
-.mcwe-modal-body {
-    max-height: calc(100%);
-    height: calc(~"100% - 60px");
-    overflow-y: hidden;
-}
-
-.mcweModalMap {
-    display: block;
-}
-
-body.modal-open {
-    margin-padding: 0px !important;
 }
