Add copy icon, highlight, and require call to cdn instead of local.

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1,3 +1,12 @@
+.mwHighlight {
+	color: lightblue;
+}
+
+.servernamecopy {
+	margin: 0 0 5px 5px;
+	cursor: pointer;
+}
+
 #minecraft-widgets {
 	.input-row {
         margin-bottom: 20px;
